# alm-orchestrator

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: 2025-12-07-recommend-investigation-context-design.md  2025-12-07-recommend-investigation-context.md  2025-12-14-issue-type-validation-design.md  2025-12-14-issue-type-validation-plan.md  2025-12-16-ssg-genai-presentation-slides.md  2026-01-04-output-validator-design-review.md  2026-01-04-output-validator-design.md  code-review.md  repository-statistics.md  sandbox-profiles-implementation.md  security-review.md  skill-directives-implementation.md
prompts/: code_review.json  code_review.md  fix.json  fix.md  impact.md  implement.json  implement.md  investigate.md  recommend.md  security_review.md
src/alm_orchestrator/: __init__.py  claude_executor.py  config.py  daemon.py  github_client.py  jira_client.py
src/alm_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/alm_orchestrator/actions/: code_review.py  fix.py  impact.py  implement.py  investigate.py  recommend.py  security_review.py
src/alm_orchestrator/utils/: __init__.py  pr_extraction.py
tests/: __init__.py  test_claude_executor.py  test_config.py  test_daemon.py  test_github_client.py  test_jira_client.py  test_pr_extraction.py
tests/test_actions/: test_code_review.py  test_fix.py  test_impact.py  test_implement.py  test_investigate.py  test_security_review.py
