[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alm-orchestrator"
version = "0.1.0"
description = "Jira + Claude Code + GitHub integration daemon"
requires-python = ">=3.12"
dependencies = [
    "jira>=3.10.0",
    "PyGithub>=2.8.0",
    "python-dotenv>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]
